# crack-sha256

./: .gitignore  Cargo.toml
benches/: benchmark.rs
src/: algos.rs  lib.rs  main.rs
