[package]
name = "rustpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
sha2 = "0.10.6"
hex = "0.4.3"

[profile.release]
# opt-level = 'z'     # Optimize for size.
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*

[[bench]]
name = "benchmark"
harness=false

