[package]
name = "crack_sha256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "*"
sha2 = { version = "*", features=["asm"]}
hex = "*"
itertools = "0.11.0"

[profile.release]
# debug = true
# opt-level = 'z'     # Optimize for size.
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*

[[bench]]
name = "benchmark"
harness=false

